--- a/public/app.css
+++ b/public/app.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Noto+Sans+TC:400,700|Source+Sans+Pro:400,600&display=swap&subset=chinese-traditional');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500&display=swap');
 
 body {
     font-family: "Noto Sans TC", "Source Sans Pro", sans-serif !important;
